# original-siren

./: .gitignore  DESCRIPTION.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
benchmarks/: Makefile  gen_plans.py  harness.py  visualize.py
benchmarks/envnoise/: config.json  template.si
benchmarks/example/: config.json
benchmarks/gtree/: config.json  template.si
benchmarks/noise/: config.json  template.si
benchmarks/outlier/: config.json  template.si
benchmarks/outlierheavy/: config.json  template.si
benchmarks/radar/: config.json  template.si
benchmarks/runner/: config.json  template.si
benchmarks/slam/: config.json  template.si
benchmarks/slds/: config.json  template.si
benchmarks/wheels/: config.json  template.si
examples/: example1.si  example2.si  example3.si  example4.si  example5.si  example6.si  example8.si  kalman.si  output.si
examples/example-performance/: example-9-compiled.si  example-9-desired.si
examples/libsiren-examples/: example-1-compiled.py  example-10-compiled.py  example-11-compiled.py  example-5-compiled.py  example-8-compiled.py  example-9-compiled.py  example-9-desired.py  example1.py  example10.py  example11.py  example12-compiled.py  example12.py  example5.py  example8.py  example9.py  outlier-compiled.py  outlier.py
siren/: __init__.py  analyze.py  evaluate.py  grammar.py  inference_plan.py  libsiren.py  parser.py  probability.py  siren.py  utils.py
siren/analysis/: __init__.py  bp.py  conjugate.py  ds.py  interface.py  ssi.py
tests/: test_analysis.py  test_run.py  test_ssi.py
(+296 files in other folders)
