[tool.poetry]
name = "siren"
version = "0.1.0"
description = "A first-order functional probabilistic programming language, implemented with the hybrid inference interface, with support for inference plans."
authors = ["Ellie Cheng", "Eric Atkinson", "Guillaume Baudart", "Louis Mandel", "Michael Carbin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "1.1.8"
matplotlib = "3.8.1"
numpy = "1.26.2"
pandas = "2.1.3"
pytest = "7.4.3"
scipy = "1.11.4"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
siren = 'siren.siren:main'

[tool.pytest.ini_options]
testpaths = "tests"
